urugano apartments intergration

--- a/apartments.html
+++ b/apartments.html
@@ -66,7 +66,7 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="room.html">Our Apartments</a>
+                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="gallery.html">Gallery</a>
@@ -114,17 +114,17 @@
       <div class="our_room">
          <div class="container">
             <div class="row" id="apartmentList">
-               <div class="col-md-4 col-sm-6 apartment-item">
-                  <div id="serv_hover"  class="room">
+               <div class="col-md-4 col-sm-6 apartment-item" onclick="window.location.href='urugano_apartments.html'">
+                  <div id="serv_hover" class="room">
                      <div class="room_img">
-                        <figure><img src="images/urugi.jpg" alt="#"/></figure>
+                        <figure><img src="images/urugi.jpg" alt="Urugano Breeze Apartments"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Urugano Breeze Apartments</h3>
-                        <p>Kigali, Kicukiro, KK 3 st, Vvip appartments with special rooms</p>
+                        <p>Kigali, Kicukiro, KK 3 st, Vvip apartments with special rooms</p>
                      </div>
                   </div>
-               </div>
+               </div>               
                <div class="col-md-4 col-sm-6 apartment-item">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
@@ -207,7 +207,7 @@
                      <ul class="link_menu">
                         <li><a href="#">Home</a></li>
                         <li><a href="about.html"> about</a></li>
-                        <li class="active"><a href="room.html">Our Apartments</a></li>
+                        <li class="active"><a href="apartments.html">Our Apartments</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
