--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="room.html">Our Apartments</a>
+                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="gallery.html">Gallery</a>
@@ -169,7 +169,7 @@
                      <ul class="link_menu">
                         <li><a href="#">Home</a></li>
                         <li><a href="about.html"> about</a></li>
-                        <li><a href="room.html">Our Apartments</a></li>
+                        <li><a href="apartments.html">Our Apartments</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li class="active"><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
