--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="room.html">Our Apartments</a>
+                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="gallery.html">Gallery</a>
@@ -136,7 +136,7 @@
                                  <input class="online_book" placeholder="dd/mm/yyyy" type="date" name="dd/mm/yyyy">
                               </div>
                               <<div class="col-md-12">
-                                 <a href="room.html" class="book_btn">Book Now</a>
+                                 <a href="apartments.html" class="book_btn">Book Now</a>
                                </div>                                                                                           
                            </div>
                         </form>
@@ -185,7 +185,7 @@
                         <figure><img src="images/room1.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 1</h3>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
                      </div>
                   </div>
@@ -196,7 +196,7 @@
                         <figure><img src="images/room2.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 2</h3>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
                      </div>
                   </div>
@@ -207,7 +207,7 @@
                         <figure><img src="images/room3.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 3</h3>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
                      </div>
                   </div>
@@ -218,7 +218,7 @@
                         <figure><img src="images/room4.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 4</h3>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
                      </div>
                   </div>
@@ -229,7 +229,7 @@
                         <figure><img src="images/room5.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 5</h3>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
                      </div>
                   </div>
@@ -240,7 +240,7 @@
                         <figure><img src="images/room6.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 6</h3>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
                      </div>
                   </div>
@@ -322,7 +322,7 @@
                         <figure><img src="images/blog1.jpg" alt="#"/></figure>
                      </div>
                      <div class="blog_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 7</h3>
                         <span>The standard chunk </span>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
                      </div>
@@ -334,7 +334,7 @@
                         <figure><img src="images/blog2.jpg" alt="#"/></figure>
                      </div>
                      <div class="blog_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 8</h3>
                         <span>The standard chunk </span>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
                      </div>
@@ -346,7 +346,7 @@
                         <figure><img src="images/blog3.jpg" alt="#"/></figure>
                      </div>
                      <div class="blog_room">
-                        <h3>Bed Room</h3>
+                        <h3>apartment 9</h3>
                         <span>The standard chunk </span>
                         <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
                      </div>
@@ -417,7 +417,7 @@
                      <ul class="link_menu">
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="about.html"> about</a></li>
-                        <li><a href="room.html">Our Apartments</a></li>
+                        <li><a href="apartments.html">Our Apartments</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
