--- a/urugano_apartments.html
+++ b/urugano_apartments.html
@@ -65,7 +65,7 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="room.html">Our Apartments</a>
+                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="gallery.html">Gallery</a>
@@ -91,7 +91,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>Our Apartments</h2>
+                     <h2>Urugano Apartments</h2>
                   </div>
                </div>
             </div>
@@ -114,8 +114,8 @@
                         <figure><img src="images/room1.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Apartment 1</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>3 bed rooms apartment</h3>
+                        <p> 15,000 RFW/ Night, you need to be sure there </p>
                      </div>
                   </div>
                </div>
@@ -197,7 +197,7 @@
                      <ul class="link_menu">
                         <li><a href="#">Home</a></li>
                         <li><a href="about.html"> about</a></li>
-                        <li class="active"><a href="room.html">Our Apartments</a></li>
+                        <li class="active"><a href="apartments.html">Our Apartments</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
