--- a/urugano_apartments.html
+++ b/urugano_apartments.html
@@ -12,6 +12,7 @@
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
+      <link rel="icon" href="images/tablogo.png" type="image/png"/>
       <!-- bootstrap css -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- style css -->
