mobile responsiveness update

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                <div class="row">
                   <div class="col-md-5">
                      <div class="book_room">
-                        <h1>Book a Room Online</h1>
+                        <h1>Book an Apartement Online</h1>
                         <form class="book_now">
                            <div class="row">
                               <div class="col-md-12">
@@ -174,7 +174,6 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>Our Apartments</h2>
-                     <p>Lorem Ipsum available, but the majority have suffered </p>
                   </div>
                </div>
             </div>
