added 4 roms apartment

--- a/html/apartment-details.html
+++ b/html/apartment-details.html
@@ -32,10 +32,11 @@
       <![endif]-->   
    </head>
 
-    <!-- Loader -->
-   <div class="loader_bg">
-    <div class="loader"><img src="../assets/images/loading.gif" alt="Loading" /></div>
-</div>
+    <!-- loader  -->
+    <div class="loader_bg">
+        <div class="loader"><img src="../assets/images/loading.gif" alt="#"/></div>
+     </div>
+     <!-- end loader -->
 
 <body class="main-layout">
     <!-- Header -->
@@ -73,25 +74,21 @@
     <a href="javascript:history.back()" class="back-btn">Back</a>
 
     <div class="container">
-        <h1 class="text-center my-5">Space for Partying</h1>
+        <h1 class="text-center my-5">4 Bedroom Apartment</h1>
         <div class="image-gallery">
-            <img src="../assets/images/3.webp" alt="Space for Partying">
-            <img src="../assets/images/13.webp" alt="Space for Partying">
-            <img src="../assets/images/7.webp" alt="Space for Partying">
-            <img src="../assets/images/viewurugano.jpg" alt="Space for Partying">
-            
+            <img src="../assets/images/livingurug.jpeg" alt="4 Bedroom Apartment - Living Room">
+            <img src="../assets/images/kitchenurug.jpg" alt="4 Bedroom Apartment - Kitchen">
+            <img src="../assets/images/2.webp" alt="4 Bedroom Apartment - Bedroom">
+            <img src="../assets/images/9.webp" alt="4 Bedroom Apartment - Bedroom">
+            <img src="../assets/images/bathurugano.webp" alt="4 Bedroom Apartment - Bathroom">
+            <img src="../assets/images/urugano1.webp" alt="4 Bedroom Apartment - Bathroom">
+            <img src="../assets/images/curturug.jpg" alt="4 Bedroom Apartment - Bathroom">
             <!-- Add more images as needed -->
         </div>
         <div class="description">
             <p>Discover a luxurious four-bedroom apartment that combines space and style. Ideal for families or roommates, this apartment features ample living areas, modern finishes, and plenty of natural light.</p>
         </div>
     </div>
-
-    <!-- Javascript files -->
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/custom.js"></script>
-    <!-- Footer -->
     <footer>
         <div class="footer">
             <div class="container">
@@ -148,11 +145,10 @@
             </div>
         </div>
     </footer>
-
     <!-- JavaScript Files -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="../js/custom.js"></script>
 </body>
 </html>
