made admin acces

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="html/contact.html">Contact Us</a>
                               </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="html/admin.html">Admin</a>
+                              </li>
                            </ul>
                         </div>
                      </nav>
@@ -137,7 +140,7 @@
                                  <input class="online_book" placeholder="dd/mm/yyyy" type="date" name="dd/mm/yyyy">
                               </div>
                               <div class="col-md-12">
-                                 <a href="html/apartments.html" class="book_btn">Book Now</a>
+                                 <a href="html/apartments.html" class="book_btn">Search apartment</a>
                                </div>                                                                                           
                            </div>
                         </form>
