--- a/html/apartments.html
+++ b/html/apartments.html
@@ -66,8 +66,8 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
-                              <li class="nav-item active">
-                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="apart.html">Our Apartments</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="gallery.html">Gallery</a>
@@ -93,24 +93,25 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>Our Apartments</h2>
+                     <h2>Available Apartments</h2>
                   </div>
                </div>
             </div>
          </div>
       </div>
       <!-- Search box above the apartments section -->
-      <div class="container">
-         <div class="row">
-            <div class="col-md-12">
-               <div class="search-box">
-                  <input type="text" id="searchInput" onkeyup="searchApartments(event)" placeholder="Search for apartments by name..." class="form-control">
-                  <p id="error-message" style="color: red; display: none;">Apartment not available</p>
+      <div class="search">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="search-box">
+                     <input type="text" id="searchInput" onkeyup="searchApartments(event)" placeholder="Search for apartments by name..." class="form-control">
+                     <p id="error-message" style="color: red; display: none;">Apartment not available</p>
+                  </div>
                </div>
             </div>
          </div>
       </div>
-
       <!-- our_room -->
       <div class="our_room">
          <div class="container">
@@ -149,7 +150,7 @@
                      <ul class="link_menu">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="about.html"> about</a></li>
-                        <li class="active"><a href="apartments.html">Our Apartments</a></li>
+                        <li><a href="apartments.html">Our Apartments</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
