updated index.html's about content

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                  <a class="nav-link" href="html/gallery.html">Gallery</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="html/blog.html">Blog</a>
+                                 <a class="nav-link" href="html/testimonial.html">testimonial</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="html/contact.html">Contact Us</a>
@@ -158,7 +158,9 @@
                <div class="col-md-5">
                   <div class="titlepage">
                      <h2>About Us</h2>
-                     <p>The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum. </p>
+                     <p>Urugano Breeze Apartments is an oasis of modern comfort nestled in the heart of Kigali. Our apartments are designed to offer an unforgettable experience, with spacious and stylish interiors, state-of-the-art amenities, and panoramic views of the beautiful city skyline. Since our inception, we’ve been dedicated to providing a serene and luxurious retreat for our guests, whether for business or leisure.
+
+                        Discover a blend of contemporary elegance and personalized service at Urugano Breeze Apartments, where every stay is tailored to meet your highest expectations. Book your stay with us to experience the ultimate in comfort and tranquility right in the city center.</p>
                      <a class="read_more" href="Javascript:void(0)"> Read More</a>
                   </div>
                </div>
@@ -355,7 +357,7 @@
                         <li><a href="html/about.html"> about</a></li>
                         <li><a href="html/apartments.html">Our Apartments</a></li>
                         <li><a href="html/gallery.html">Gallery</a></li>
-                        <li><a href="html/blog.html">Blog</a></li>
+                        <li><a href="html/testimonial.html">testimonial</a></li>
                         <li><a href="html/contact.html">Contact Us</a></li>
                      </ul>
                   </div>
