--- a/html/urugano_apartment10.html
+++ b/html/urugano_apartment10.html
@@ -94,7 +94,7 @@
                           <span class="badge badge-primary rating-score">8.5</span>
                           <span class="rating-text">Excellent – 20 reviews</span>
                         </div>
-                        <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS'"><u>Kigali</u> · <u>Show on map</u></p>
+                        <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS/@-1.9910096,30.1748283,810m/data=!3m2!1e3!4b1!4m6!3m5!1s0x19db59711c1ff1bb:0xed219b0fe04ce09f!8m2!3d-1.991015!4d30.1774032!16s%2Fg%2F11h5kf7t8m?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D'"><u>Kigali</u> · <u>Show on map</u></p>
                         <p class="distance">6.5 km from center</p>
                         <hr>
                         <div class="card-header">
@@ -117,7 +117,7 @@
                                 <span class="badge badge-primary rating-score">8.5</span>
                                 <span class="rating-text">Excellent – 20 reviews</span>
                               </div>
-                              <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS'"><u>Kigali</u> · <u>Show on map</u></p>
+                              <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS/@-1.9910096,30.1748283,810m/data=!3m2!1e3!4b1!4m6!3m5!1s0x19db59711c1ff1bb:0xed219b0fe04ce09f!8m2!3d-1.991015!4d30.1774032!16s%2Fg%2F11h5kf7t8m?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D'"><u>Kigali</u> · <u>Show on map</u></p>
                               <p class="distance">6.5 km from center</p>
                               <hr>
                               <div class="card-header">
@@ -141,7 +141,7 @@
                                 <span class="badge badge-primary rating-score">8.5</span>
                                 <span class="rating-text">Excellent – 20 reviews</span>
                               </div>
-                              <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS'"><u>Kigali</u> · <u>Show on map</u></p>
+                              <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS/@-1.9910096,30.1748283,810m/data=!3m2!1e3!4b1!4m6!3m5!1s0x19db59711c1ff1bb:0xed219b0fe04ce09f!8m2!3d-1.991015!4d30.1774032!16s%2Fg%2F11h5kf7t8m?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D'"><u>Kigali</u> · <u>Show on map</u></p>
                               <p class="distance">6.5 km from center</p>
                               <hr>
                               <div class="card-header">
@@ -165,7 +165,7 @@
                                 <span class="badge badge-primary rating-score">8.5</span>
                                 <span class="rating-text">Excellent – 20 reviews</span>
                               </div>
-                              <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS'"><u>Kigali</u> · <u>Show on map</u></p>
+                              <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS/@-1.9910096,30.1748283,810m/data=!3m2!1e3!4b1!4m6!3m5!1s0x19db59711c1ff1bb:0xed219b0fe04ce09f!8m2!3d-1.991015!4d30.1774032!16s%2Fg%2F11h5kf7t8m?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D'"><u>Kigali</u> · <u>Show on map</u></p>
                               <p class="distance">6.5 km from center</p>
                               <hr>
                               <div class="card-header">
@@ -189,7 +189,7 @@
                                 <span class="badge badge-primary rating-score">8.5</span>
                                 <span class="rating-text">Excellent – 20 reviews</span>
                               </div>
-                              <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS'"><u>Kigali</u> · <u>Show on map</u></p>
+                              <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS/@-1.9910096,30.1748283,810m/data=!3m2!1e3!4b1!4m6!3m5!1s0x19db59711c1ff1bb:0xed219b0fe04ce09f!8m2!3d-1.991015!4d30.1774032!16s%2Fg%2F11h5kf7t8m?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D'"><u>Kigali</u> · <u>Show on map</u></p>
                               <p class="distance">6.5 km from center</p>
                               <hr>
                               <div class="card-header">
@@ -213,7 +213,7 @@
                             <span class="badge badge-primary rating-score">8.5</span>
                             <span class="rating-text">Excellent – 20 reviews</span>
                           </div>
-                          <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS'"><u>Kigali</u> · <u>Show on map</u></p>
+                          <p class="card-location" onclick="window.location.href='https://www.google.com/maps/place/URUGANO+BREEZE+APARTMENTS/@-1.9910096,30.1748283,810m/data=!3m2!1e3!4b1!4m6!3m5!1s0x19db59711c1ff1bb:0xed219b0fe04ce09f!8m2!3d-1.991015!4d30.1774032!16s%2Fg%2F11h5kf7t8m?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D'"><u>Kigali</u> · <u>Show on map</u></p>
                           <p class="distance">6.5 km from center</p>
                           <hr>
                           <div class="card-header">
