--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                <div class="col-md-5">
                   <div class="titlepage">
                      <h2>About Us</h2>
-                     <p>Urugano Breeze Apartments is an oasis of modern comfort nestled in the heart of Kigali. Our apartments are designed to offer an unforgettable experience, with spacious and stylish interiors, state-of-the-art amenities, and panoramic views of the beautiful city skyline. Since our inception, we’ve been dedicated to providing a serene and luxurious retreat for our guests, whether for business or leisure.
+                     <p class="abou-cont">Urugano Breeze Apartments is an oasis of modern comfort nestled in the heart of Kigali. Our apartments are designed to offer an unforgettable experience, with spacious and stylish interiors, state-of-the-art amenities, and panoramic views of the beautiful city skyline. Since our inception, we’ve been dedicated to providing a serene and luxurious retreat for our guests, whether for business or leisure.
 
                         Discover a blend of contemporary elegance and personalized service at Urugano Breeze Apartments, where every stay is tailored to meet your highest expectations. Book your stay with us to experience the ultimate in comfort and tranquility right in the city center.</p>
                      <a class="read_more" href="Javascript:void(0)"> Read More</a>
