--- a/html/muhabura.html
+++ b/html/muhabura.html
@@ -95,11 +95,11 @@
             <h1 class="text-center my-5 flex-grow-1">MUHABURA Apartment</h1>
             <div class="d-flex align-items-center">
                 <!-- Price Display Box -->
-                <div class="price-box bg-dark text-white px-3 py-2 mr-3" style="border-radius: 5px;">
-                    <span>$120/night</span>
+                <div class="price-box" style="border-radius: 5px;">
+                    <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="final-price">US$2,242</span><span class="nights"> / 5 nights</span></p>
                 </div>
                 <!-- Book Now Button -->
-                <a href="userdata.html" class="btn btn-danger">Book Now</a>
+                <a href="userdata.html" class="btn btn-danger">Book This Apartment</a>
             </div>
         </div>
         
