--- a/html/sabyinyo.html
+++ b/html/sabyinyo.html
@@ -97,8 +97,8 @@
             <h1 class="text-center my-5 flex-grow-1">SABYINYO Apartment</h1>
             <div class="d-flex align-items-center">
                 <!-- Price Display Box -->
-                <div class="price-box bg-dark text-white px-3 py-2 mr-3" style="border-radius: 5px;">
-                    <span>$120/night</span>
+                <div class="price-box" style="border-radius: 5px;">
+                    <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="final-price">US$2,242</span><span class="nights"> / 5 nights</span></p>
                 </div>
                 <!-- Book Now Button -->
                 <a href="userdata.html" class="btn btn-danger">Book Now</a>
@@ -148,7 +148,7 @@
                         <ul class="link_menu">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li"><a href="apartments.html">Our Apartments</a></li>
+                            <li><a href="apartments.html">Our Apartments</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
                             <li><a href="testimonial.html">testimonial</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
