--- a/html/urugano_apartment10.html
+++ b/html/urugano_apartment10.html
@@ -126,7 +126,7 @@
                               <p class="description-title">2 Bedrooms Apartment</p>
                               <p class="description-text">Entire apartment · 2 bedrooms · 1 bathrooms · 150m²</p>>
                               <p class="nights">5 nights</p>
-                              <p class="price"><span class="discounted-price">US$2,450</span><span class="final-price">US$2,242</span></p>
+                              <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="final-price">US$2,242</span></p>
                               <div class="bt-div"><button class="btn btn-primary" onclick="window.location.href='muhabura.html'">See Availability</button></div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                               <p class="description-title">2 Bedrooms Apartment</p>
                               <p class="description-text">Entire apartment · 2 bedrooms · 1 bathrooms · 150m²</p>
                               <p class="nights">5 nights</p>
-                              <p class="price"><span class="discounted-price">US$2,450</span><span class="final-price">US$2,242</span></p>
+                              <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="discounted-price">US$2,242</span></p>
                               <div class="bt-div"><button class="btn btn-primary" onclick="window.location.href='sabyinyo.html'">See Availability</button></div>
                         </div>
                     </div>
@@ -172,9 +172,9 @@
                                  <span class="recommended">Recommended for your group</span>
                               </div>
                               <p class="description-title">4 Bedrooms Apartment</p>
-                              <p class="description-text">Entire apartment · 4 bedrooms · 2 bathrooms · 150m²</p>>
+                              <p class="description-text">Entire apartment · 3 bedrooms · 3 bathrooms · 150m²</p>>
                               <p class="nights">5 nights</p>
-                              <p class="price"><span class="discounted-price">US$2,450</span><span class="final-price">US$2,242</span></p>
+                              <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="final-price">US$2,242</span></p>
                               <div class="bt-div"><button class="btn btn-primary" onclick="window.location.href='gahinga.html'">See Availability</button></div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                               <p class="description-title">4 Bedrooms Apartment</p>
                               <p class="description-text">Entire apartment · 4 bedrooms · 2 bathrooms · 150m²</p>>
                               <p class="nights">5 nights</p>
-                              <p class="price"><span class="discounted-price">US$2,450</span><span class="final-price">US$2,242</span></p>
+                              <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="final-price">US$2,242</span></p>
                               <div class="bt-div"><button class="btn btn-primary" onclick="window.location.href='bisoke.html'">See Availability</button></div>
                         </div>
                     </div>    
@@ -222,7 +222,7 @@
                           <p class="description-title">Partying Space</p>
                           <p class="description-text">Entire space · luxurious view · Bar  · 500m²</p>>
                           <p class="nights">5 nights</p>
-                          <p class="price"><span class="discounted-price">US$2,450</span><span class="final-price">US$2,242</span></p>
+                          <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="discounted-price">US$2,242</span></p>
                           <div class="bt-div"><button class="btn btn-primary" onclick="window.location.href='space.html'">See Availability</button></div>
                       </div>
                     </div>
