--- a/index.html
+++ b/index.html
@@ -372,6 +372,8 @@
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.instagram.com/urugano_breeze_apartment/profilecard/?igsh=b3IyZ2xvaXZlY3c3"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+
                      </ul>
                   </div>
                </div>
