--- a/html/booking.html
+++ b/html/booking.html
@@ -79,6 +79,9 @@
                                 <li class="nav-item active">
                                   <a class="nav-link" href="booking.html">Booking</a>
                                 </li>
+                                <li class="nav-item">
+                                 <a class="nav-link" href="testimonial-admin.html">Testimonial</a>
+                               </li>
                             </ul>
                         </div>
                      </nav>
