--- a/html/space.html
+++ b/html/space.html
@@ -95,21 +95,14 @@
             <h1 class="text-center my-5 flex-grow-1">SPACE FOR PARTYING</h1>
             <div class="d-flex align-items-center">
                 <!-- Price Display Box -->
-                <div class="price-box bg-dark text-white px-3 py-2 mr-3" style="border-radius: 5px;">
-                    <span>$120/night</span>
+                <div class="price-box" style="border-radius: 5px;">
+                    <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="final-price">US$2,242</span><span class="nights"> / 2 Days</span></p>
                 </div>
                 <!-- Book Now Button -->
                 <a href="userdata.html" class="btn btn-danger">Book Now</a>
             </div>
         </div>
         
-
-
-
-
-
-
-
         <div class="image-gallery">
             <img src="../assets/images/3.webp" alt="Space for Partying">
             <img src="../assets/images/13.webp" alt="Space for Partying">
