--- a/html/testimonial.html
+++ b/html/testimonial.html
@@ -105,7 +105,7 @@
          <div class="container">
              <h2 class="section-title">What our Customer Says</h2>
              <div class="swiper-container">
-                 <div class="swiper-wrapper">
+                 <div class="swiper-wrapper" id="testimonialList">
                      <!-- Slide 1 -->
                      <div class="swiper-slide">
                          <div class="testimonial">
